# pnoc

./: README.md  add-data-create.php  bentaco-inventory.php  database.sql  db.php  export-reports.php  index.html  inventory-dashboard.php  iot-inventory.php  item-status-monitoring.php  location-management.php  overview-dashboard.php  pnoc_schema.sql  pyproject.toml  records-management.php  report-generation.php  staff.php  tools-utilities.php
api/: inventory.php  staff.php  staff_api.php
api/data/: bentaco.json  iot.json
includes/: db.php
pnoc/: __init__.py  cli.py  compiler.py  monitor.py  sorter.py
pnoc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_pnoc.py
tools/: normalize_statuses.php
